feat(scheduling): 添加排课冲突处理功能及相关接口
- 在 ClassAssignmentController 中新增解决排课冲突的接口，支持根据排课分配 UUID 解决相关冲突。
- 在 ClassAssignmentLogic 中实现解决冲突的逻辑，检查并更新冲突状态。
- 在 SchedulingConflictDAO 中添加冲突检查和删除功能，优化冲突信息的保存和缓存处理。
- 更新 StringConstant，新增排课冲突相关的 Redis 缓存键常量。
- 在 AiLogic 中集成排课冲突信息，增强排课逻辑的智能化处理。